2004-05-13  Lluis Sanchez Gual  <lluis@ximian.com>

	* SerializationTest.cs: Test serialization of empty struct arrays. This
	  used to fail.

2003-07-23  Lluis Sanchez Gual  <lluis@ximian.com>

	* SerializationTest.cs: Fixed delegate invocation. Didn't compile
	  on windows.

2003-07-23  Lluis Sanchez Gual  <lluis@ximian.com>

	* SerializationTest.cs: Added.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AllTests.cs: added FormatterServicesTests.
	* FormatterServicesTests.cs: New file.

2002-06-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AllTests.cs: New file to make 'make test' work.
	* ChangeLog: New file.
