@@ -1,3 +1,7 @@
+2004-12-09  Lluis Sanchez Gual  <lluis@ximian.com>
+
+	* SerializationTest.cs: Added test for bug #70104.
+
 2004-05-13  Lluis Sanchez Gual  <lluis@ximian.com>
 
 	* SerializationTest.cs: Test serialization of empty struct arrays. This
